--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
   "bugs": {
     "url": "https://github.com/alasidig/learn_node/issues"
   },
-  "homepage": "https://github.com/alasidig/learn_node#readme"
+  "homepage": "https://github.com/alasidig/learn_node#readme",
+  "dependencies": {
+    "express": "^4.19.2"
+  }
 }
