Step 11 Template Engine | Template Inheritance

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/alasidig/learn_node#readme",
   "dependencies": {
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "nunjucks": "^3.2.4"
   }
 }
