Step 14 form validation using express-validator

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/alasidig/learn_node#readme",
   "dependencies": {
     "express": "^4.19.2",
+    "express-validator": "^7.0.1",
     "nunjucks": "^3.2.4"
   }
 }
