--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "express": "^4.19.2",
     "express-validator": "^7.0.1",
+    "multer": "^1.4.5-lts.1",
     "nunjucks": "^3.2.4"
   }
 }
