--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
   },
   "homepage": "https://github.com/alasidig/learn_node#readme",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
     "express-validator": "^7.0.1",
+    "jwt-simple": "^0.5.6",
     "mongoose": "^8.3.1",
     "multer": "^1.4.5-lts.1",
     "nunjucks": "^3.2.4"
